--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#details,
+#score-row {
+  text-align: center;
+}
+
 h1 {
   text-align: center;
 }
@@ -16,15 +26,15 @@ h1 {
   border: 1px solid black;
   display: grid;
   justify-content: center;
+  width: fit-content;
 }
 
 #board div {
   height: 30px;
-  border: 1px solid #000;
 }
 
 .active {
-  background: rgb(108, 108, 186);
+  background: #3E800B
 }
 
 .apple {
@@ -35,4 +45,5 @@ h1 {
 
 .apple::before {
   content: '🍎';
+  font-size: 2rem;
 }
